@@ -1,3 +1,6 @@
+//
+// Simple test of the par block.
+//
 
 #include <stdio.h>
 
