@@ -18,6 +18,11 @@ my @Tests = (
 	   cmd     => "par2",
 	   checker => \&check_par2,
 	  },
+	  # Looping par block test with structure as loop variable.
+	  {
+	   cmd     => "par3",
+	   checker => \&check_par3,
+	  },
 	  # Quicksort with parallel sorting of split elements.
 	  {
 	   cmd     => "qsort",
@@ -88,6 +93,23 @@ sub check_par2 {
 	if ($res[$i] != $exp[$i]) {
 	  die "Mismatch on result value $i (Found $res[$i], expected $exp[$i]).\n";
 	}
+      }
+    }
+  }
+}
+
+# Pretty much the same as check_par2, except slightly different data is expected.
+sub check_par3 {
+  my @lines = split /\n/,@_[0];
+  my $start = 101;
+  for (@lines) {
+    if ( /^Result/ ) {
+      my @res = ( /Result\[\d+\]:\s+(\d+.\d+)/g );
+      for my $i (0..$#res) {
+	if ($res[$i] != $start) {
+	  die "Mismatch on result value $i (Found $res[$i], expected $start).\n";
+	}
+	$start += 2;
       }
     }
   }
